--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -6,6 +6,9 @@
 "https://{default}/":
     type: upstream
     upstream: "app:http"
+    cache:
+        enabled: false
+
 
 "https://www.{default}/":
     type: redirect
