--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "template-express",
   "version": "1.0.0",
   "description": "Example ExpressJS project for Platform.sh",
-  "main": "index.js",
+  "main": "nodejs/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node nodejs/main.js"
   },
   "repository": {
     "type": "git",
@@ -15,6 +15,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "mysql2": "^1.6.5",
-    "platformsh-config": "^2.0.0"
+    "platformsh-config": "^2.0.0",
+    "http-proxy-middleware": "^2.0.6",
+    "request": "^2.88.2"
   }
 }
